<resources>
    <string name="app_name">Floryt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="computers">Computers</string>
    <string name="my_computers">My Computers</string>
    <string name="shared_computers">Shared Computers</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="notifications">Notification</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="share_us">Share us</string>
    <string name="contact_us">Contact us</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <string name="logo">Logo</string>
    <string name="button_email">Sign in with email</string>
    <string name="button_google">Sign in with Google</string>
    <string name="button_facebook">Sign in with Facebook</string>
    <string name="button_twitter">Sign in with Twitter</string>
    <string name="button_github">Sign in with GitHub</string>
    <string name="title_activity_login">Floryt - Sign in</string>
    <string name="user_icon">user icon</string>
    <string name="title_activity_identity_verification">Identity Verification Request</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="user_identity_approval_question">Trying to sign in to a computer via Floryt?</string>
    <string name="title_activity_permission_request">Permission Request</string>
    <string name="dashboard">Dashboard</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="unknown_sign_in_response">Unknown sign in response</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="sign_in">Sign in</string>
    <string name="dummy_ip">192.168.4.110</string>
    <string name="dummy_time">10:25 AM</string>
    <string name="dummy_email">Steven@gmail.com</string>
    <string name="dummy_computer_name">Computer name</string>
    <string name="show_computer">Show computer</string>
    <string name="show_user">Show user</string>
    <string name="more">MORE</string>
    <string name="computer_image">Computer image</string>
    <string name="name">Name</string>
    <string name="ip_address">IP Address</string>
    <string name="dummy_last_seen">Today, 10:02 PM</string>
    <string name="location">Location</string>
    <string name="administrators">Administrators</string>
    <string name="remove">Remove</string>
    <string name="computer_activity_log">Computer activity log</string>
    <string name="identity_verification">Identity verification</string>
    <string name="verified">Verified</string>
    <string name="options_button">options button</string>
    <string name="logs">Logs</string>
    <string name="dummy_message">Owner is no available</string>
    <string name="reject">REJECT</string>
    <string name="approve">APPROVE</string>
    <string name="timeout_message">Time is out</string>
    <string name="arrow">arrow</string>
    <string name="new_login_request">New Login Request,</string>
    <string name="identity_verification_message">Did you just asked to sign in to</string>
    <string name="ip_missing_message">\"IP is not available\"</string>
    <string name="missing_ip_address">Missing IP address</string>
    <string name="unknown_status">Unknown status</string>
    <string name="last_seen">Last Seen</string>
    <string name="missing_records">Missing records</string>
    <string name="owner">Owner</string>
    <string name="activity_log_of_computer">Activity log of computer:</string>
    <string name="lock_command">Lock user</string>
    <string name="screenshot_command">Take screenshot</string>
    <string name="shutdown_command">Shutdown computer</string>
    <string name="message_command">Present message</string>
    <string name="type_your_message">Type Your Message:</string>
    <string name="last_activity">Last activity</string>
    <string name="screenshots">Screenshots</string>
    <string name="activity_log">Activity log</string>
    <string name="status">Status</string>
    <string name="current_user">Current user</string>
    <string name="demo">Demo</string>
    <string name="owner_login">Owner login</string>
    <string name="guest_login">Guest login</string>
</resources>
