<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/dashboard"
        />

    <item android:title="@string/logs">
        <menu>
            <item
                android:id="@+id/nav_activity_log"
                android:icon="@drawable/ic_format_list_bulleted_black_24dp"
                android:title="@string/activity_log" />
            <item
                android:id="@+id/nav_computers_activity_log"
                android:icon="@drawable/ic_dvr_black_24dp"
                android:title="@string/computer_activity_log" />
        </menu>
    </item>

    <item android:title="@string/computers">
        <menu>
            <item
                android:id="@+id/nav_my_computers"
                android:icon="@drawable/ic_desktop_windows_black_24dp"
                android:title="@string/my_computers" />
            <item
                android:id="@+id/nav_shared_computers"
                android:icon="@drawable/ic_screen_share_black_24dp"
                android:title="@string/shared_computers" />
        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/account" />
            <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_notifications_black_24dp"
                android:title="@string/notifications" />
        </menu>
    </item>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_link_black_24dp"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_share_us"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_us" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sign_out_button"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/log_out" />
    </group>
</menu>