<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/floryt"
        android:contentDescription="@string/logo"
        android:layout_above="@+id/button_google_login" />

    <Button
        android:id="@+id/button_google_login"
        android:width="250dp"
        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/button_google"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_email_login"
        android:width="250dp"
        style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_email"
        android:layout_below="@+id/button_google_login"
        android:layout_alignStart="@+id/button_google_login" />

    <Button
        android:id="@+id/button_facebook_login"
        android:width="250dp"
        style="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_facebook"
        android:layout_below="@+id/button_email_login"
        android:layout_alignStart="@+id/button_google_login" />

    <Button
        android:id="@+id/button_github_login"
        style="@style/FirebaseUI.Button.AccountChooser.GitHubButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_facebook_login"
        android:layout_centerHorizontal="true"
        android:width="250dp"
        android:text="@string/button_github" />

    <Button
        android:id="@+id/button_twitter_login"
        android:width="250dp"
        style="@style/FirebaseUI.Button.AccountChooser.TwitterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_twitter"
        android:layout_below="@+id/button_github_login"
        android:layout_alignStart="@+id/button_facebook_login" />

</RelativeLayout>