<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_list_row"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_list_row"
    android:paddingStart="?listPreferredItemPaddingLeft"
    android:paddingEnd="?listPreferredItemPaddingRight"
    android:paddingTop="@dimen/padding_list_row">

    <ImageView
        android:id="@+id/activity_log_icon"
        android:layout_width="@dimen/icon_width_height"
        android:layout_height="@dimen/icon_width_height"
        android:src="@drawable/ic_fingerprint_black_24dp"
        android:foregroundGravity="center_vertical"
        android:contentDescription="@string/computer_image"/>

    <LinearLayout
        android:id="@+id/message_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:orientation="vertical"
        android:paddingStart="72dp"
        android:paddingEnd="@dimen/padding_list_row">

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/identity_verification"
            android:textSize="@dimen/text_primary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/verified"
            android:textStyle="bold"
            android:textColor="@color/material_green_700"
            android:textSize="@dimen/text_secondary" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/dummy_message"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_secondary" />

        <TextView
            android:id="@+id/computer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/dummy_computer_name"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_secondary" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/dummy_time"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_secondary" />

    </LinearLayout>

</RelativeLayout>
