<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_list_row"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingStart="?listPreferredItemPaddingLeft"
    android:paddingTop="@dimen/padding_list_row">

    <ImageView
        android:layout_width="@dimen/icon_width_height"
        android:layout_height="@dimen/icon_width_height"
        android:src="@drawable/ic_account_circle_black_24dp"
        android:contentDescription="@string/computer_image"
        android:id="@+id/imageView3"/>

    <LinearLayout
        android:id="@+id/message_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:orientation="vertical"
        android:paddingStart="72dp"
        android:paddingEnd="@dimen/padding_list_row">

        <TextView
            android:id="@+id/computer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/dummy_computer_name"
            android:textSize="@dimen/text_primary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/computer_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/text_gray"
            android:text="@string/dummy_email"
            android:textSize="@dimen/text_secondary" />

        <TextView
            android:id="@+id/computer_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/dummy_ip"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_secondary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/message_container"
        android:background="@color/material_gray_400"
        android:layout_toEndOf="@+id/imageView3"/>

</RelativeLayout>
