<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_secondary"/>

        <TextView
            android:id="@+id/computer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_computer_name"
            android:textSize="@dimen/text_primary"/>

        <TextView
            android:id="@+id/title_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_address"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_secondary"
            android:paddingTop="@dimen/activity_horizontal_margin"/>
        <TextView
            android:id="@+id/computer_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_ip"
            android:textSize="@dimen/text_primary"/>

        <TextView
            android:id="@+id/title_last_seen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_address"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_secondary"
            android:paddingTop="@dimen/activity_horizontal_margin"/>
        <TextView
            android:id="@+id/computer_last_seen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_last_seen"
            android:textSize="@dimen/text_primary"/>

        <TextView
            android:id="@+id/title_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_secondary"
            android:paddingTop="@dimen/activity_horizontal_margin"/>
        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:apiKey="0Sy8vgJlQkFxcisUAkrxu3xN33dqFgBetCg4jxg"/>

        <android.support.v7.widget.CardView
            android:id="@+id/administrators_card"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:elevation="8dp"
            card_view:cardCornerRadius="2dp">

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/administrators_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/administrators"
                    android:textSize="14sp"
                    android:textColor="@color/text_gray"/>

                <LinearLayout
                    android:id="@+id/administrators_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_below="@id/administrators_title"
                    android:orientation="vertical"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/activity_log_card"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:elevation="8dp"
            card_view:cardCornerRadius="2dp">

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/activity_log_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_log"
                    android:textSize="14sp"
                    android:textColor="@color/text_gray"/>

                <LinearLayout
                    android:id="@+id/activity_log_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_below="@id/activity_log_title"
                    android:orientation="vertical"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_horizontal_margin"/>
    </LinearLayout>
</ScrollView>