<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_list_row"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_list_row"
    android:paddingStart="?listPreferredItemPaddingLeft"
    android:paddingEnd="?listPreferredItemPaddingRight"
    android:paddingTop="@dimen/padding_list_row">

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/icon_width_height"
        android:layout_height="@dimen/icon_width_height"
        android:src="@drawable/ic_account_circle_black_24dp"
        android:contentDescription="@string/computer_image"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/dummy_computer_name"
        android:textSize="@dimen/text_primary"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/image"
        android:paddingStart="8dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:textColor="@color/text_gray"
        android:text="@string/dummy_email"
        android:textSize="@dimen/text_secondary"
        android:layout_alignBottom="@+id/image"
        android:layout_toEndOf="@+id/image"
        android:paddingStart="8dp"/>


    <ImageView
        android:id="@+id/icon_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more_vert_black_24dp"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/email"/>

</RelativeLayout>